k8s/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-test-pod
spec:
  containers:
  - name: test-container
    image: busybox
    command: ['sh', '-c', 'while true; do sleep 30; done;']
