k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
    - port: 80
      nodePort: 31000
      targetPort: 8000 # this port is running the fastapi on port as specified in the Dockerfile
